--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,12 @@
 :root {
   --font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  --light-grey: #e2e2e2;
-  --grey: #b3b3b3;
+  --white: #ffffff;
+  --off-white: #f0f0f0;
+  --platinum: #e2e2e2;
+  --silver: #b3b3b3;
+  --grey: #858585;
+  --bright-blue: #4872f9;
 }
 
 html,
@@ -26,7 +30,7 @@ hr {
   text-align: center;
   height: 0;
   border: 0;
-  border-top: 1px solid var(--light-grey);
+  border-top: 1px solid var(--platinum);
 }
 
 .categories.section.container {
@@ -42,11 +46,17 @@ hr {
   align-items: center;
   column-gap: 0.5rem;
   padding: 0.5rem;
+  margin: 4px 0;
+  border-radius: 6px;
+}
+
+.group-by.item:hover {
+  background-color: var(--off-white);
 }
 
 .group-by.heading {
   font-weight: bold;
-  color: var(--grey);
+  color: var(--silver);
 }
 
 .group-by.svg {
@@ -57,8 +67,8 @@ hr {
 .tasks.section.container {
   padding: 1rem;
   flex: 2;
-  border-left: 1px solid var(--light-grey);
-  border-right: 1px solid var(--light-grey);
+  border-left: 1px solid var(--platinum);
+  border-right: 1px solid var(--platinum);
 }
 
 .tasks.heading.container {
@@ -74,10 +84,49 @@ hr {
 
 .tasks.heading.text {
   margin-right: auto;
-  font-size: 24px;
-  font-weight: 500;
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .view-task.section.container {
   flex: 2;
+}
+
+.add-task.input.container {
+  position: relative;
+  margin: 1rem 0;
+}
+
+#add-task {
+  width: 100%;
+  border-radius: 6px;
+  border: 1px solid var(--off-white);
+  outline: none;
+  background-color: var(--off-white);
+  padding: 0.5rem;
+}
+
+#add-task::placeholder {
+  color: var(--grey);
+}
+
+#add-task:focus {
+  background-color: var(--white);
+  border: 1px solid var(--bright-blue);
+}
+
+.add-task.svgs.container {
+  display: flex;
+  position: absolute;
+  width: fit-content;
+  gap: 6px;
+  padding: 0.5rem;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+}
+
+.add-task.svg {
+  width: 20px;
+  height: auto;
 }
