--- a/src/styles.css
+++ b/src/styles.css
@@ -94,7 +94,8 @@ hr {
 
 .add-task.input.container {
   position: relative;
-  margin: 1rem 0;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 #add-task {
@@ -128,5 +129,17 @@ hr {
 
 .add-task.svg {
   width: 20px;
+  height: auto;
+}
+
+.task.container {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  gap: 0.5rem;
+}
+
+.task.svg {
+  width: 24px;
   height: auto;
 }
