--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,8 @@ body {
 }
 
 #content {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
   height: 100%;
   overflow: hidden;
 }
@@ -48,7 +49,6 @@ hr.vertical {
 .categories.section.container {
   padding: 1rem;
   padding-right: 0.5rem;
-  flex: 1;
 }
 
 .group-by.item,
@@ -78,7 +78,6 @@ hr.vertical {
 
 .tasks.section.container {
   padding: 1rem;
-  flex: 2;
   border-left: 1px solid var(--platinum);
   border-right: 1px solid var(--platinum);
 }
@@ -101,7 +100,9 @@ hr.vertical {
 }
 
 .view-task.section.container {
-  flex: 2;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 .add-task.input.container {
@@ -238,12 +239,24 @@ label:has(input[type="checkbox"]):hover {
 
 .view-task.body.container {
   padding: 1rem;
-  height: 100%;
-  overflow-y: scroll;
+  overflow: scroll;
+  flex: 1;
 }
 
 .view-task.name {
   margin-bottom: 0.5rem;
   font-size: 1.3rem;
   font-weight: 500;
+}
+
+.view-task.description {
+  outline: 0;
+  overflow-wrap: break-word;
+  white-space: normal;
+  overflow: visible;
+}
+
+.view-task.description:empty:not(:focus):before {
+  content: attr(data-ph);
+  color: var(--grey);
 }
