Refactor list more button & dropdown code Separate more button and dropdown as well as dropdown items to individual functions. This makes the createTasksSectionHeading function slightly more readable and understandable

--- a/src/styles.css
+++ b/src/styles.css
@@ -577,4 +577,6 @@ dialog::backdrop {
   height: 0 !important;
   width: 0 !important;
   opacity: 0 !important;
+  /* otherwise the categories section won't fold */
+  flex: 0 !important;
 }
